--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
   datasource:
-    url: jdbc:h2:mem:clientdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
+      username: postgres
+      password: password
+      driver-class-name: org.postgresql.Driver
+      url: jdbc:postgresql://localhost:5432/clients
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
